# fastadmin

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  app.py  pyproject.toml  t.py
alembic/: env.py
alembic/versions/: 2573100e725c_.py  9b656d14e17d_.py  acb1c9be8a4d_.py  bde5c5164439_.py  c90cf61a5f35_.py  cf82da984d33_.py  e60d1a27785b_.py
fastadmin/: __init__.py  conf.py  constants.py  metadata.py  router.py  tools.py
fastadmin/config/: __init__.py
fastadmin/interface/: components.py  pages.py
fastadmin/middleware/: auth.py  jwt.py
fastadmin/model/: actions.py  attributes.py  db_manager.py  sqlmodel2pydantic.py
fastadmin/tools/: __init__.py  components.py  connections.py  page.py  tools.py  tracker.py
fastadmin/tools/crud/: _abstract.py  _sync.py  sessions.py
fastadmin/ui/: main.py  settings.py  urls.py
fastadmin/utils/: func.py  tools.py  tracker.py  words.py
fastadmin/utils/database/: asyn.py  enum.py  permissions.py  tables.py
fastadmin/utils/descriptor/: clas.py
fastadmin/utils/types/: __init__.py
tests/: conftest.py  tables.py  test_as_pydantic_model.py  test_components_model.py  test_fastadmin_app.py  test_inheritance_tracker.py  test_page.py  test_sessions.py  test_sqlalchemy_table.py
tests/test_pages/: test_page.py
