[tool.poetry]
name = "fastadmin"
version = "0.1.0"
description = ""
authors = ["dchnkoo <valera.dchn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
fastapi = {extras = ["all"], version = "^0.115.6"}
fastui = "^0.7.0"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pydantic = "2.8.2"
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88 
target-version = "py311"


[tool.ruff.lint]
select = ["E", "F", "I"]


[tool.ruff.format]
docstring-code-format = true
